--- a/Assignment/Assignment-1-Student.ipynb
+++ b/Assignment/Assignment-1-Student.ipynb
@@ -28,13 +28,36 @@
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### 2. Create an array from my_list=[5,10,15,20,25]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 5, 10, 15, 20, 25])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_list = np.array([ 5, 10, 15, 20, 25])\n",
+    "my_list "
    ]
   },
   {
@@ -53,13 +76,40 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    " \n"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### 3. Generate an array 5x5 zeros "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zeros= np.zeros((5,5))\n",
+    "zeros"
    ]
   },
   {
@@ -93,6 +143,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 1, 1, 1],\n",
+       "       [1, 1, 1, 1],\n",
+       "       [1, 1, 1, 1],\n",
+       "       [1, 1, 1, 1]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ones= np.ones((4,4), dtype= int)\n",
+    "ones"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -117,6 +191,30 @@
    "metadata": {},
    "source": [
     "#### 5. Make all the values of the array above 7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[7, 7, 7, 7],\n",
+       "       [7, 7, 7, 7],\n",
+       "       [7, 7, 7, 7],\n",
+       "       [7, 7, 7, 7]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reihe_7= np.ones((4,4), dtype= int) * 7\n",
+    "reihe_7"
    ]
   },
   {
@@ -149,6 +247,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[7, 7, 7, 7],\n",
+       "       [7, 7, 7, 7],\n",
+       "       [7, 7, 7, 7],\n",
+       "       [7, 7, 7, 7]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reihe_sieben = np.full((4, 4), 7)\n",
+    "reihe_sieben"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
@@ -169,17 +291,30 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### 7. Create an array of even integers from 2 to 16 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0,  2,  4,  6,  8, 10, 12, 14, 16])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.arange(0,17,2)"
    ]
   },
   {
@@ -205,6 +340,30 @@
    "metadata": {},
    "source": [
     "#### 8. Create a 5x5 matrix with values between 0 to 25"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2,  3,  4],\n",
+       "       [ 5,  6,  7,  8,  9],\n",
+       "       [10, 11, 12, 13, 14],\n",
+       "       [15, 16, 17, 18, 19],\n",
+       "       [20, 21, 22, 23, 24]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.arange(0,25).reshape(5,5)"
    ]
   },
   {
@@ -238,6 +397,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2,  3,  4],\n",
+       "       [ 5,  6,  7,  8,  9],\n",
+       "       [10, 11, 12, 13, 14],\n",
+       "       [15, 16, 17, 18, 19],\n",
+       "       [20, 21, 22, 23, 24]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linspace(0,24,num=25,dtype = int).reshape(5,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [
@@ -267,6 +450,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.11678469, 0.95446405, 0.61273301, 0.39898958, 0.45135325])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.rand(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
@@ -288,6 +491,30 @@
    "metadata": {},
    "source": [
     "#### 11. Create random normal distributed 5x5 array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.07834057,  0.3217797 , -0.65276482, -2.38048165,  1.4255558 ],\n",
+       "       [ 1.07909641, -0.10486068,  1.12820155,  0.26017209, -0.6273558 ],\n",
+       "       [-2.01278311, -0.85627893,  0.89340115,  2.24909451, -2.24152082],\n",
+       "       [-0.50739426, -0.23023802,  0.93088253, -0.41302945, -1.40012874],\n",
+       "       [-0.42198167,  1.34412424, -0.51005216,  0.16245407,  0.36081287]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.randn(25).reshape(5,5)"
    ]
   },
   {
@@ -321,6 +548,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[35, 21, 35, 27],\n",
+       "       [31, 40, 45, 46],\n",
+       "       [21, 35, 40, 48]])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.randint(20,50, size=(3,4))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [
@@ -348,10 +597,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2, 11,  3, 27, 37, 38, 41,  0],\n",
+       "       [ 4, 15, 34, 39, 32, 38,  5, 12],\n",
+       "       [16, 25, 46,  0, 44, 44,  0, 41],\n",
+       "       [ 8, 11, 35, 40,  1, 39, 11,  9],\n",
+       "       [15, 23,  4, 31, 35, 14, 15, 24],\n",
+       "       [ 5, 36, 18, 41, 14, 46, 44, 33]])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ra=np.random.randint(0,48, size=48).reshape(6,8)\n",
+    "ra"
+   ]
   },
   {
    "cell_type": "code",
@@ -400,6 +668,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2, 11,  3, 27, 37, 38, 41,  0,  4, 15, 34, 39],\n",
+       "       [32, 38,  5, 12, 16, 25, 46,  0, 44, 44,  0, 41],\n",
+       "       [ 8, 11, 35, 40,  1, 39, 11,  9, 15, 23,  4, 31],\n",
+       "       [35, 14, 15, 24,  5, 36, 18, 41, 14, 46, 44, 33]])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.reshape(ra,(4,-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
    "outputs": [
@@ -426,6 +717,30 @@
    "metadata": {},
    "source": [
     "## Numpy Indexing and Selection\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  2,  3,  4],\n",
+       "       [ 5,  6,  7,  8],\n",
+       "       [ 9, 10, 11, 12],\n",
+       "       [13, 14, 15, 16]])"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mat=  np.arange(1,17).reshape(4,4)\n",
+    "mat"
    ]
   },
   {
@@ -462,6 +777,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 6,  7],\n",
+       "       [10, 11]])"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mat[1:3,1:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
    "outputs": [
@@ -484,6 +820,26 @@
    "metadata": {},
    "source": [
     "#### 15. Get the first column of the array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1,  5,  9, 13])"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mat[:,0]"
    ]
   },
   {
@@ -513,6 +869,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5, 7])"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "mat[1,0::2]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
    "outputs": [
@@ -534,6 +912,30 @@
    "metadata": {},
    "source": [
     "#### 17.Assign 77 to every cell in 3rd column."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  2, 77,  4],\n",
+       "       [ 5,  6, 77,  8],\n",
+       "       [ 9, 10, 77, 12],\n",
+       "       [13, 14, 77, 16]])"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mat[:,2]=77\n",
+    "mat"
    ]
   },
   {
@@ -592,6 +994,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 5, 14])"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mat[[1,3],[0,1]]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {
     "scrolled": true
@@ -615,6 +1037,27 @@
    "metadata": {},
    "source": [
     "#### 19. Take between 2nd and last row with step 2 and between 1 and last column with step 2."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 5, 77],\n",
+       "       [13, 77]])"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mat[[[1,1],[3,3]],[[0,2],[0,2]]]"
    ]
   },
   {
@@ -652,7 +1095,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([78, 79, 81, 18, 20, 85, 25])"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mat[(mat<10)]\n",
+    "mat[(mat >12)]\n",
+    "mat[(mat<10)] + mat[(mat >12)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +1129,7 @@
        "       [13, 14, 77, 16]])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,7 +1154,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "mat[(mat<10)]"
+   ]
   },
   {
    "cell_type": "code",
@@ -707,7 +1174,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "mat[(mat >12)]"
+   ]
   },
   {
    "cell_type": "code",
@@ -725,7 +1194,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "mat[(mat<10)] + mat[(mat >12)]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2151,7 +2622,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
