--- a/2- Weekly Agenda/Week_3/week-3-student.ipynb
+++ b/2- Weekly Agenda/Week_3/week-3-student.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "95fb3da7",
    "metadata": {},
    "outputs": [],
@@ -1140,6 +1140,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "9790ced9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds =[weather_dtyp, weather_notnull,weather_null,weather_unique]\n",
+    "result = pd.concat(ds, join='outer', axis=1)\n",
+    "result = result.reset_index().rename(columns = {'index':'Columns'})\n",
+    "result\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "634776c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_merge = df_types.join(df_notnull).join(df_null).join(df_nunique).reset_index().rename(columns={'index':'Columns'})\n",
+    "df_merge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "413682d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.merge(pd.merge(pd.merge(df_types, df_notnull, left_index=True, right_index=True), df_null, left_index=True, right_index=True), df_nunique, left_index=True, right_index=True).reset_index().rename(columns={'index':'Columns'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2116b51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.concat([data1, data2, data3, data4], axis= 1).reset_index().rename(columns={'index':'Columns'})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "id": "34220906",
    "metadata": {},
@@ -1394,7 +1438,7 @@
     }
    ],
    "source": [
-    "# ..."
+    "# ...^^"
    ]
   },
   {
@@ -1923,6 +1967,19 @@
    "metadata": {},
    "source": [
     "#### 14.\tFind out the most rainy day for each city."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f06e52c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.groupby('location').max()[['date', 'rainfall']]\n",
+    "df.groupby('location')['rainfall'].idxmax()\n",
+    "df.loc[df.groupby('location')['rainfall'].idxmax().values][['location','date','rainfall']]\n",
+    "\n"
    ]
   },
   {
@@ -4713,7 +4770,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
